fixed bug viewing on mobile in landscape mode

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   background-color: #1c1b1b;
   min-height: 100vh;
+  min-width: 100vw;
 }
 
 .App-header {
